2004-02-18  Kevin Vandersloot

	* stickynotes.c: don't set the position to 0,0 on note creation.
	Fixes bug #125675

2004-02-11 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/stickynotes_applet.xml: Updated for GNOME 2.6.
	* docs/C/stickynotes_applet-C.omf: Updated for GNOME 2.6.
	* docs/C/l10n.txt: Updated for GNOME 2.6.

2004-02-10  Dennis Smit  <ds@nerds-incorporated.org>

	* stickynotes_applet_callback.c (menu_about_cb):
	Do the initial about dialog spawm on the right screen
	fixes multihead issue.

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-06  Dennis Smit  <ds@nerds-incorporated.org>

	Changed multihead fixes to reflect CVS.

	Mostly based on patch by:
	Leena Gunda  <leena.gunda@wipro.com>
        
	* stickynotes.h, stickynote.c:
        Set the screen for the stickynotes window and properties dialog.

	* stickynotes_applet.c, stickynotes_applet_callbacks.c,
        stickynotes_callbacks.c:
        Pass the screen info. of the applet while creating a stickynote.
        Fixes bug# 128258.

2003-02-01  Shakti <shakti.sen@wipro.com>

	* stickynotes/stickynotes.glade:
	  Changed the modality of the properties window.
	  Set the numeric field to True.
	  Fixes the bug #126348

2004-02-01  Dennis Smit  <ds@nerds-incorporated.org>
	* stickynotes_applet.c:
	* GNOME_StickyNotesApplet.server.in.in:

	Added patch from SUN to make the stickynotes applet
	use the icon theme for it's app icon.

	Fixes #130642.

2004-01-30  Dennis Smit  <ds@nerds-incorporated.org>
	* stickynotes_applet.h: add about_dialog entry to the 
	StickyNotesApplet structure
	
	* stickynotes_applet_callbacks.c (menu_about_cb): make use of
	the about box within the applet structure to avoid sharing
	between instances, also allow only one about dialog
	per instance.
	(applet_destroy_cb):
	destroy about box when it's present.
	
	* stickynotes_applet.c (stickynotes_applet_new):