@@ -185,6 +185,8 @@ void stickynote_set_title(StickyNote *note, const gchar *title)
 	/* If title is NULL, use the current date as the title. */
 	if (!title) {
 		gchar *date_format = gconf_client_get_string(stickynotes->gconf, GCONF_PATH "/settings/date_format", NULL);
+		if (!date_format)
+			date_format = g_strdup ("%x");
 		title = get_current_date(date_format);
 		g_free(date_format);
 	}
