@@ -1,3 +1,8 @@
+2004-02-19  Kevin Vandersloot
+
+	* stickynotes_applet.c, stickynotes.c: Put in some sanity checks for gconf settings.
+	Should at least prevent bug #124024
+
 2004-02-18  Kevin Vandersloot
 
 	* stickynotes.c: don't set the position to 0,0 on note creation.
